// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MaestroTranslators - Tap and Press Actionss > longPressOn > should match snapshot for basic longPressOn 1`] = `
"- longPressOn:
    id: "elementId"
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > longPressOnPoint > should match snapshot for basic longPressOnPoint 1`] = `
"- longPressOn:
    point: 100,200
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > longPressOnPoint > should match snapshot for longPressOnPoint with percentage values 1`] = `
"- longPressOn:
    point: 50%,75%
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > longPressOnText > should match snapshot for basic longPressOnText 1`] = `
"- longPressOn: Submit
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOn > should match snapshot for basic tapOn 1`] = `
"- tapOn:
    id: "elementId"
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOn > should match snapshot for tapOn with all TapProps 1`] = `
"- tapOn:
    id: "elementId"
    index: 2
    retryTapIfNoChange: false
    repeat: 3
    waitToSettleTimeoutMs: 300
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOn > should match snapshot for tapOn with index 1`] = `
"- tapOn:
    id: "elementId"
    index: 1
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOn > should match snapshot for tapOn with repeat 1`] = `
"- tapOn:
    id: "elementId"
    repeat: 3
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOn > should match snapshot for tapOn with retryTapIfNoChange false 1`] = `
"- tapOn:
    id: "elementId"
    retryTapIfNoChange: false
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOn > should match snapshot for tapOn with waitToSettleTimeoutMs 1`] = `
"- tapOn:
    id: "elementId"
    waitToSettleTimeoutMs: 300
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnPoint > should match snapshot for basic tapOnPoint 1`] = `
"- tapOn:
    point: 100,200
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnPoint > should match snapshot for tapOnPoint with all TapProps 1`] = `
"- tapOn:
    point: 100,200
    index: 2
    retryTapIfNoChange: false
    repeat: 3
    waitToSettleTimeoutMs: 300
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnPoint > should match snapshot for tapOnPoint with index 1`] = `
"- tapOn:
    point: 100,200
    index: 1
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnPoint > should match snapshot for tapOnPoint with repeat 1`] = `
"- tapOn:
    point: 100,200
    repeat: 3
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnPoint > should match snapshot for tapOnPoint with retryTapIfNoChange false 1`] = `
"- tapOn:
    point: 100,200
    retryTapIfNoChange: false
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnPoint > should match snapshot for tapOnPoint with waitToSettleTimeoutMs 1`] = `
"- tapOn:
    point: 100,200
    waitToSettleTimeoutMs: 300
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnText > should match snapshot for basic tapOnText 1`] = `
"- tapOn:
    text: "Submit"
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnText > should match snapshot for tapOnText with all TapProps 1`] = `
"- tapOn:
    text: "Submit"
    index: 2
    retryTapIfNoChange: false
    repeat: 3
    waitToSettleTimeoutMs: 300
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnText > should match snapshot for tapOnText with index 1`] = `
"- tapOn:
    text: "Submit"
    index: 1
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnText > should match snapshot for tapOnText with repeat 1`] = `
"- tapOn:
    text: "Submit"
    repeat: 3
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnText > should match snapshot for tapOnText with retryTapIfNoChange false 1`] = `
"- tapOn:
    text: "Submit"
    retryTapIfNoChange: false
"
`;

exports[`MaestroTranslators - Tap and Press Actionss > tapOnText > should match snapshot for tapOnText with waitToSettleTimeoutMs 1`] = `
"- tapOn:
    text: "Submit"
    waitToSettleTimeoutMs: 300
"
`;
